[project]
name = "tampura_environments"
version = "0.1.0"
description = ""
authors = []
dependencies = [
    "numpy==1.24.4",
    "black>=23.9.1",
    "docformatter>=1.7.5",
    "isort>=5.12.0",
    "pylint>=2.14.5",
    "pytest-pylint>=0.18.0",
    "pymdptoolbox>=4.0b3",
    "pybullet>=3.2.6",
    "rtree>=1.3.0",
    "trimesh>=4.6.8",
    "pyyaml>=6.0.2",
    "tabulate>=0.9.0",
    "zmq>=0.0.0",
    "open3d>=0.18.0",
    "gymnasium>=0.29.1",
    "stable_baselines3>=2.3.2",
    "tensorboard>=2.18.0",
    "imageio>=2.37.0",
    "tqdm>=4.67.3",
    "tampura @ git+https://github.com/aidan-curtis/tampura.git"
]

[tool.setuptools]
packages = ["tampura_environments"]